--- a/docker-compose.jenkins.yml
+++ b/docker-compose.jenkins.yml
@@ -43,7 +43,7 @@ services:
 volumes:
   jenkins_home:
     external: true
-    name: buy-01_jenkins_home
+    name: jenkins_home
 
 networks:
   BACKEND:
