--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,9 +43,9 @@ services:
     environment:
       SONAR_ES_BOOTSTRAP_CHECKS_DISABLE: 'true'
     volumes:
-      - /Users/mohammad.kheirkhah/.docker-volumes/sonarqube_data:/opt/sonarqube/data
-      - /Users/mohammad.kheirkhah/.docker-volumes/sonarqube_logs:/opt/sonarqube/logs
-      - /Users/mohammad.kheirkhah/.docker-volumes/sonarqube_extensions:/opt/sonarqube/extensions
+      - /Users/parisa.rahimi/.docker-volumes/sonarqube_data:/opt/sonarqube/data
+      - /Users/parisa.rahimi/.docker-volumes/sonarqube_logs:/opt/sonarqube/logs
+      - /Users/parisa.rahimi/.docker-volumes/sonarqube_extensions:/opt/sonarqube/extensions
     networks:
       - BACKEND
     healthcheck:
